src/test/julian/Parsing/SyntaxError/prog_1.jul
/* $PRAGMA$ info.julang.ide.no.parsing */
int x = 5;
int y =int;
int z = 3;